--- a/.github/workflows/TestGithubActionsSecret.yml
+++ b/.github/workflows/TestGithubActionsSecret.yml
@@ -14,5 +14,7 @@ jobs:
           mkdir -p ~/.ssh
           echo ${SHOGUNCAO_HAVA_A_TEST_SSH_KEY} > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+          echo "cat ~/.ssh/id_rsa"
+          cat ~/.ssh/id_rsa
           git clone git@github.com:shoguncao/hava_a_test.sh
         
